# fastplot-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  code_review_ousterhout.md  expected_output.txt  sales_numeric.csv  test_data.csv
.claude-workflow/: simple-rules.md
.claude/agents/: docs-quality-reviewer.md  ousterhout-code-reviewer.md
.claude/commands/: feature-setup.md
benches/: data_parsing.rs  end_to_end.rs  plot_rendering.rs
examples/: basic_plots.rs  demo.rs  performance.rs  simple_demo.rs
plans/: LAYOUT_MODULARITY_PLAN.md  temp-claude-line-plot-suggestions.md
readme-data/: quadratic.csv  sine.csv
src/: axis.rs  bar_chart.rs  canvas.rs  cli.rs  color.rs  config.rs  coordinates.rs  data.rs  fplot.rs  function.rs  layered_canvas.rs  layout.rs  lib.rs  line_drawing.rs  line_plot.rs  line_style.rs  main.rs  performance.rs  plot_config.rs  scatter.rs  ticks.rs
src/data/: mod.rs  parser.rs  types.rs
src/plot/: axis_ticks.rs  axis_utils.rs  bar.rs  boxplot.rs  canvas.rs  color_utils.rs  data_utils.rs  density.rs  histogram.rs  layout.rs  line.rs  mod.rs  render_utils.rs  scatter.rs
src/testing/: benchmarks.rs  datasets.rs  generators.rs  mod.rs
test-data/: categorical_quarters.csv  categorical_regions.csv  numeric_simple.csv  quadratic.csv  sine.csv
tests/: compatibility.rs  integration.rs  performance.rs  readme_examples.rs
