[package]
name = "fastplot-cli"
version = "0.1.0"
edition = "2021"
description = "A high-performance terminal plotting tool implemented in Rust inspired by YouPlot"
authors = ["Christopher Gandrud <christopher.gandrud@gmail.com>"]
license = "MIT"
repository = "https://github.com/christophergandrud/fastplot-cli"
categories = ["command-line-utilities", "visualization", "science"]
keywords = ["plotting", "terminal", "cli", "visualization", "youplot"]

[lib]
name = "fastplot_cli"
path = "src/lib.rs"

[[bin]]
name = "fastplot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
crossterm = "0.27"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
unicode-width = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "data_parsing"
harness = false

[[bench]]
name = "plot_rendering"
harness = false

[[bench]]
name = "end_to_end"
harness = false

